requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddemcee"
version = "0.8.5"
description = "Adaptive Parallel Tempering MCMC Ensemble Sampler"
readme = "README.md"
license = {file="LICENSE"}
authors = [
  { name="ReddTea", email="redd@tea.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "emcee>=3",
  "tqdm",
]
requires-python = ">=3.6"

[tool.setuptools]
# Tells setuptools that your source code is under "src"
package-dir = {"" = "src"}
include-package-data = true

# This is optional, but if you don't specify which packages to include,
# setuptools will attempt to find them automatically:
# packages = ["reddemcee"]