[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "reddemcee"
version = "0.9.0"
description = "Adaptive Parallel Tempering MCMC Ensemble Sampler"
readme = "README.md"
license = {file="LICENSE"}
authors = [{ name="ReddTea", email="redd@tea.com"}]
keywords = ["python", "MCMC", "sampler", "adaptive", "parallel tempering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",]
dependencies = [
  "numpy",
  "emcee>=3",
  "tqdm",
  "scipy"]
requires-python = ">=3.6"


[project.urls]
Homepage = "https://reddemcee.readthedocs.io/"
Documentation = "https://reddemcee.readthedocs.io/"
Repository = "https://github.com/ReddTea/reddemcee/"
Issues = "https://github.com/ReddTea/reddemcee/issues"


[tool.setuptools]
# Tells setuptools that your source code is under "src"
package-dir = {"" = "src"}
include-package-data = true

# This is optional, but if you don't specify which packages to include,
# setuptools will attempt to find them automatically:
# packages = ["reddemcee"]